Fixed spacings.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -606,3 +606,18 @@
     }
   }
 }
+
+// Pagination
+// --------------------------------------------------
+
+.pagination {
+  span { 
+    margin-right: 2px;
+  }
+  em {
+    margin-right: 2px;
+  }
+  a {
+    margin-right: 2px;
+  }
+}
